# RDMA-examples

./: .gitignore  CMakeLists.txt  README.md  configure  deploy_soft_roce.sh
include/: client.h  const.h  dbg.h  server.h  utils.h
src/: client.c  server.c  utils.c
